# CPlusPlus

./: ColorConsoleWrite.cpp  PartialTemplates.h  README.md  SIMD_Image.cpp
EmScripten/: CMakeLists.txt  README.md
EmScripten/HelloWasm/src/: HelloWorld.cpp
EmScripten/HelloWorld/: CMakeLists.txt  README.md  emscripten.cmake
EmScripten/HelloWorld/src/: HelloWorld.cpp
EmScripten/RayLibExample/: .gitignore  CMakeLists.txt  README.md
EmScripten/RayLibExample/src/: rotatingCube.cpp
EmScripten/Tetris/: .gitignore  CMakeLists.txt  README.md
EmScripten/Tetris/src/: Block.cpp  Block.h  Board.cpp  Board.h  Cell.cpp  Cell.h  Const.h  Game.cpp  Game.h  Main.cpp  Piece.cpp  Piece.h  Timer.h  utils.h
ExtractWords/: ExtractWords.cpp  ExtractWords.sln  ExtractWords.vcxproj  ExtractWords.vcxproj.filters  ReadMe.txt
GrpcExample/RequestReply/: CMakeLists.txt  README.md
GrpcExample/RequestReply/cmake/: grpc.cmake  protobuf.cmake
GrpcExample/RequestReply/protos/: echoInterface.proto
GrpcExample/RequestReply/src/client/: client.cpp
GrpcExample/RequestReply/src/server/: server.cpp
Helloworld/: CMakeLists.txt  README.md
Helloworld/src/: HelloWorld.cpp
Linux/: Installation
Linux/HelloWorld/: main  main.cpp
