cmake_minimum_required(VERSION 3.0)

set(**DCMAKE_BUILD_TYPE**** debug**)

IF(NOT DCMAKE_BUILD_TYPE)
    SET(DCMAKE_BUILD_TYPE Release)
ENDIF()

MESSAGE("Build type: " ${DCMAKE_BUILD_TYPE})

project(HelloWorld)

file(GLOB_RECURSE HELLOWORLD_SRC_LIST
    src/*.cpp
    src/*.h
    include/*.h)

set(HELLOWORLD_BINARY HelloWorld.html)
add_executable(${HELLOWORLD_BINARY} ${HELLOWORLD_SRC_LIST})

set_property(TARGET ${HELLOWORLD_BINARY} PROPERTY CXX_STANDARD 17)


MESSAGE("CMAKE_RUNTIME_OUTPUT_DIRECTORY: " ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
MESSAGE("CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR})

